style.css
.bg {
    background-color: rgb(5, 0, 15);
    overflow: hidden;
}

.star {
    position: absolute;
    background-color: rgb(255, 255, 255);
    padding: 4px;
    padding-top: 25px;
    border: 2px solid rgb(240, 255, 103)
}

.character {
    border: 3px solid white;
    transform: translate(-50%, -50%);
    width: 50px;
    user-select: none;
    position: absolute;
    box-shadow: 0px 0px 20px white;
    z-index: 1;
}

.enemy {
    border: 3px solid red;
    transform: translate(-50%, -50%);
    width: 100px;
    height: 100px;
    user-select: none;
    position: absolute;
    box-shadow: 0px 0px 25px red;
    animation: moveEnemy 10s ease Infinite;
}

.enemyVis {
    width: 100px;
    height: 100px;
}


.characterDiv {
    position: absolute;
    padding: 0px 0px 0px 0px;
    user-select: none;
}

.laser {    
    position: absolute;
    padding: 50px 5px 20px 5px;
    background-color: white;
    user-select: none;
    border: 4px solid rgb(0, 255, 150);
    box-shadow: 0px 0px 50px rgb(0, 255, 150), 0px 0px 25px rgb(0, 255, 150);
    transform: translate(-50%, -50%);
}

@keyframes moveEnemy {
    0% {left: 10%}
    50% {left: 90%}
    100% {left: 10%}
}

.score {
    position: absolute;
    text-align: center;
    user-select: none;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
    font-size: 400%;
    font-weight: 900;
    color: white;
    -webkit-text-stroke: 3px rgb(100, 0, 255);
    transform: translate(-50%, -50%);
    left: 50%;
    text-shadow: 0px 0px 50px rgb(100, 0, 255);
    animation: scoreMove 8s ease infinite;
}

.damage {
    position: absolute;
    text-align: center;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
    font-size: 250%;
    color: #da5f5f;
    -webkit-text-stroke: 1px #ff0000;
    text-shadow: 0px 0px 25px #ff0000;
    left: 50%;
    z-index: 3;
    user-select: none;
}

@keyframes scoreMove {
    0% {top: 90%;}
    50% {top: 95%;}
    100% {top: 90%;}
}

.openShop {
    position: absolute;aa
    text-align: center;
    user-select: none;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
    font-size: 250%;
    font-weight: 900;
    color: white;
    -webkit-text-stroke: 1px rgb(255, 225, 0);
    transform: translate(-50%, -50%);
    left: 15%;
    top: 92%;
    text-shadow: 0px 0px 25px rgb(255, 225, 0);
}

.openShop:hover {
    font-size: 325%;
    text-shadow: 0px 0px 50px rgb(255, 225, 0);
    cursor: pointer;
}

.shopMenuBG {
    position: absolute;
    transform: translate(-50%, -50%);
    -webkit-text-stroke: 3px black;
    left: 50%;
    top: 50%;
    font-size: 500%;
    font-weight: 900;
    color:white;
    background-color: black;
    opacity: 0.7;
    padding: 50% 50% 50% 50%;
    z-index: 4;
    user-select:none;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
}

.shopMenu {
    position: absolute;
    transform: translate(-50%, -50%);
    -webkit-text-stroke: 3px black;
    left: 50%;
    top: 50%;
    font-size: 500%;
    font-weight: 900;
    color:white;
    background-color: rgba(0, 255, 150, 0.5);
    padding: 0% 35% 40% 35%;
    z-index: 5;
    user-select:none;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
    border: 10px solid rgb(0, 255, 150);
}

.closeShop {
    position: absolute;
    transform: translate(-50%, -50%);
    -webkit-text-stroke: 3px black;
    left: 90%;
    top: 10%;
    font-size: 300%;
    font-weight: 900;
    color:white;
    background-color: white;
    padding: 0.5% 1% 0.5% 1%;
    z-index: 6;
    user-select:none;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
    border: 4px solid black;
}

.closeShop:hover {
    cursor:pointer;
    padding: 0.75% 1.5% 0.75% 1.5%;
    font-size: 400%;
}

.upOne {
    transform: translate(-50%, -50%);
    position: absolute;
    padding: 15px 10px 0px 10px;
    top: 20%;
    left: 15%;
    font-size: 60px;
    color: white;
    user-select: none;
    font-weight: 600;
    -webkit-text-stroke: 2px rgb(0, 255, 150);
    background-color: black;
    border: 4px solid rgb(0, 255, 150);
    z-index: 6;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
}

.upOne:hover {
    cursor: pointer;
    font-size: 80px;
    padding: 18px 13px 2px 13px;
}

.u1Price {
    transform: translate(-50%, -50%);
    position: absolute;
    padding: 0px;
    top: 20%;
    left: 23%;
    font-size: 45px;
    color: white;
    user-select: none;
    font-weight: 300;
    -webkit-text-stroke: 2px rgb(0, 255, 150);
    z-index: 6;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
}


.u1Desc {
    transform: translate(-50%, -50%);
    position: absolute;
    top: 12%;
    left: 17%;
    font-size: 25px;
    color: white;
    user-select: none;
    font-weight: 600;
    -webkit-text-stroke: 1px black;
    z-index: 6;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
}

